[package]
name = "tnil"
version = "0.1.3"
edition = "2021"
authors = ["Zachary Sakowitz <zsakowitz@gmail.com>"]
description = "Parsing, glossing, and generating utilites for New Ithkuil"
documentation = "https://docs.rs/tnil"
homepage = "https://docs.rs/tnil"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zsakowitz/tnil"

[features]
sheet-root-data = []
sheet-affix-data = []
lexicon-json-root-data = []

[dependencies]
once_cell = "1.19.0"
paste = "1.0.14"
regex = "1.10.2"
vec1 = "1.10.1"
